# TRIANGLES_homework

./: CMakeLists.txt  README.md  big_test_output.txt  geometry.cpp  geometry.hpp  makefile  tests.cpp  triangles.cpp
